// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Resource/MetadataDisplay Metadata Display 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
  >
    <dl
      class="MuiGrid-root MuiGrid-container css-bddxam-MuiGrid-root"
    >
      <dt
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
      >
        Name
      </dt>
      <dd
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
        >
          my-new-kind
        </span>
      </dd>
      <dt
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
      >
        Namespace
      </dt>
      <dd
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-srrjpp-MuiTypography-root-MuiLink-root"
          href="/"
        >
          kube-system
        </a>
      </dd>
      <dt
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
      >
        Creation
      </dt>
      <dd
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
        >
          2021-06-02T00:00:00.000Z
        </span>
      </dd>
      <dt
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-16fae59-MuiGrid-root"
      >
        Labels
      </dt>
      <dd
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-1xrovmc-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-17wqeb1-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-wdtksl-MuiGrid-root"
            style="max-width: 80%;"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-zeroMinWidth css-175wz9v-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-141xs6k-MuiTypography-root"
              >
                label1: My Label 1
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-zeroMinWidth css-175wz9v-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-141xs6k-MuiTypography-root"
              >
                label2: My Label 2
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-zeroMinWidth css-175wz9v-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-141xs6k-MuiTypography-root"
              >
                label3: My Label 3
              </p>
            </div>
          </div>
        </div>
      </dd>
    </dl>
  </div>
</div>
`;

exports[`Storyshots Resource/MetadataDisplay With Extra Rows 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
  >
    <dl
      class="MuiGrid-root MuiGrid-container css-bddxam-MuiGrid-root"
    >
      <dt
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
      >
        Name
      </dt>
      <dd
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
        >
          my-new-kind
        </span>
      </dd>
      <dt
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
      >
        Namespace
      </dt>
      <dd
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-srrjpp-MuiTypography-root-MuiLink-root"
          href="/"
        >
          kube-system
        </a>
      </dd>
      <dt
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
      >
        Creation
      </dt>
      <dd
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
        >
          2021-06-02T00:00:00.000Z
        </span>
      </dd>
      <dt
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
      >
        Labels
      </dt>
      <dd
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-17wqeb1-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-wdtksl-MuiGrid-root"
            style="max-width: 80%;"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-zeroMinWidth css-175wz9v-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-141xs6k-MuiTypography-root"
              >
                label1: My Label 1
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-zeroMinWidth css-175wz9v-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-141xs6k-MuiTypography-root"
              >
                label2: My Label 2
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-zeroMinWidth css-175wz9v-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-141xs6k-MuiTypography-root"
              >
                label3: My Label 3
              </p>
            </div>
          </div>
        </div>
      </dd>
      <dt
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
      >
        Some extra label 1
      </dt>
      <dd
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
        >
          Some extra value 1
        </span>
      </dd>
      <dt
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
      >
        Some extra label 2
      </dt>
      <dd
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
        >
          Some extra value 2
        </span>
      </dd>
      <dt
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-16fae59-MuiGrid-root"
      >
        Some extra label 3
      </dt>
      <dd
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-1xrovmc-MuiGrid-root"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
        >
          Some extra value 3
        </span>
      </dd>
    </dl>
  </div>
</div>
`;

exports[`Storyshots Resource/MetadataDisplay With Owner References 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
  >
    <dl
      class="MuiGrid-root MuiGrid-container css-bddxam-MuiGrid-root"
    >
      <dt
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
      >
        Name
      </dt>
      <dd
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
        >
          my-new-kind
        </span>
      </dd>
      <dt
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
      >
        Namespace
      </dt>
      <dd
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-srrjpp-MuiTypography-root-MuiLink-root"
          href="/"
        >
          kube-system
        </a>
      </dd>
      <dt
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
      >
        Creation
      </dt>
      <dd
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
        >
          2021-06-02T00:00:00.000Z
        </span>
      </dd>
      <dt
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
      >
        Labels
      </dt>
      <dd
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-17wqeb1-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-wdtksl-MuiGrid-root"
            style="max-width: 80%;"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-zeroMinWidth css-175wz9v-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-141xs6k-MuiTypography-root"
              >
                label1: My Label 1
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-zeroMinWidth css-175wz9v-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-141xs6k-MuiTypography-root"
              >
                label2: My Label 2
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-zeroMinWidth css-175wz9v-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-141xs6k-MuiTypography-root"
              >
                label3: My Label 3
              </p>
            </div>
          </div>
        </div>
      </dd>
      <dt
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-16fae59-MuiGrid-root"
      >
        Controlled by
      </dt>
      <dd
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-1xrovmc-MuiGrid-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-srrjpp-MuiTypography-root-MuiLink-root"
          href="/"
        >
          Deployment
          : 
          kube-scheduler
        </a>
      </dd>
    </dl>
  </div>
</div>
`;
